exchanged package name

--- a/DepthsOfUnity_Elective_Submission/Assets/TestPackage/package.json
+++ b/DepthsOfUnity_Elective_Submission/Assets/TestPackage/package.json
@@ -1,5 +1,5 @@
 {
-    "domainName": "com",
+    "domainName": "com.testPackage",
     "companyName": "defaultcompany",
     "useSettingsCompanyName": true,
     "packageName": "depthsofunity_elective_submission",
